bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.10.3/docs/SystemInfo.md


# SystemInfo

Class SystemInfo.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**localAddress** | **String** | Gets or sets the local address. |  [optional] |
|**serverName** | **String** | Gets or sets the name of the server. |  [optional] |
|**version** | **String** | Gets or sets the server version. |  [optional] |
|**productName** | **String** | Gets or sets the product name. This is the AssemblyProduct name. |  [optional] |
|**operatingSystem** | **String** | Gets or sets the operating system. |  [optional] |
|**id** | **String** | Gets or sets the id. |  [optional] |
|**startupWizardCompleted** | **Boolean** | Gets or sets a value indicating whether the startup wizard is completed. |  [optional] |
|**operatingSystemDisplayName** | **String** | Gets or sets the display name of the operating system. |  [optional] |
|**packageName** | **String** | Gets or sets the package name. |  [optional] |
|**hasPendingRestart** | **Boolean** | Gets or sets a value indicating whether this instance has pending restart. |  [optional] |
|**isShuttingDown** | **Boolean** |  |  [optional] |
|**supportsLibraryMonitor** | **Boolean** | Gets or sets a value indicating whether [supports library monitor]. |  [optional] |
|**webSocketPortNumber** | **Integer** | Gets or sets the web socket port number. |  [optional] |
|**completedInstallations** | [**List&lt;InstallationInfo&gt;**](InstallationInfo.md) | Gets or sets the completed installations. |  [optional] |
|**canSelfRestart** | **Boolean** | Gets or sets a value indicating whether this instance can self restart. |  [optional] |
|**canLaunchWebBrowser** | **Boolean** |  |  [optional] |
|**programDataPath** | **String** | Gets or sets the program data path. |  [optional] |
|**webPath** | **String** | Gets or sets the web UI resources path. |  [optional] |
|**itemsByNamePath** | **String** | Gets or sets the items by name path. |  [optional] |
|**cachePath** | **String** | Gets or sets the cache path. |  [optional] |
|**logPath** | **String** | Gets or sets the log path. |  [optional] |
|**internalMetadataPath** | **String** | Gets or sets the internal metadata path. |  [optional] |
|**transcodingTempPath** | **String** | Gets or sets the transcode path. |  [optional] |
|**castReceiverApplications** | [**List&lt;CastReceiverApplication&gt;**](CastReceiverApplication.md) | Gets or sets the list of cast receiver applications. |  [optional] |
|**hasUpdateAvailable** | **Boolean** | Gets or sets a value indicating whether this instance has update available. |  [optional] |
|**encoderLocation** | **String** |  |  [optional] |
|**systemArchitecture** | **String** |  |  [optional] |



